--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d620e8ba14.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chats | Kakao Clone</title>
 </head>
 <body>
@@ -24,13 +25,13 @@
             <h1 class="header__title">Chats</h1>
         </div>
         <div class="header__header-column">
-            <span class="header icon">
+            <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <span class="header icon">
+            <span class="header__icon">
                 <i class="far fa-comment"></i>
             </span>
-            <span class="header icon">
+            <span class="header__icon">
                 <i class="fas fa-cog"></i>
             </span>
         </div>
@@ -39,18 +40,24 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                    <div class="chat__column">
-                            <img class="chat__avatar g-avatar" src="images/racoon.jpg">
-                        <div class="chat__content">
-                            <span class="chat__username">
-                                Mr.racoon
-                            </span>
-                            <span class="chat__preview">Going home</span>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                             <img src="images/racoon.jpg" class="m-avatar friend__avatar">
+                             <div class="friend__content">
+                                 <span class="friend__name">
+                                     Mr.racoon
+                                 </span>
+                                 <span class="friend__bottom-text">
+                                     Going Home!
+                                 </span>
+                             </div> 
                         </div>
-                    </div>
-                    <div class="chat__column">
-                        <span class="chat__timestamp">Yesterday</span>
-                    </div>
+                        <div class="friend__column">
+                            <span class="chat__timestamp">
+                                March 8
+                            </span>
+                        </div>
+                     </div>
                 </a>
             </li>
         </ul>
@@ -64,6 +71,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
@@ -77,5 +85,8 @@
                     <i class="fas fa-ellipsis-h"></i></a></li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small</span>
+    </div>
 </body>
 </html>
