--- a/more.html
+++ b/more.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d620e8ba14.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>More | Kakao Clone</title>
 </head>
 <body>
@@ -24,13 +25,13 @@
             <h1 class="header__title">More</h1>
         </div>
         <div class="header__header-column">
-            <span class="header icon">
+            <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <span class="header icon">
+            <span class="header__icon">
                 <i class="fas fa-qrcode"></i>
             </span>
-            <span class="header icon">
+            <span class="header__icon">
                 <a href="settings.html">
                     <i class="fas fa-cog"></i>
                 </a>
@@ -39,9 +40,9 @@
     </header>
     <main class="more">
         <header class="more__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="images/racoon.jpg" class="g-avatar friend__avartar">
+                    <img src="images/racoon.jpg" class="g-avatar friend__avatar">
                         <div class="friend__content">
                         <span class="friend__name">
                             Mr.racoon
@@ -83,19 +84,19 @@
         <section class="more__suggestions">
             <h5 class="more__title">Suggestions</h5>
             <ul class="more__suggestions-list">
-                <li class="more__suggestion suggestion">
+                <li class="more__suggestions suggestion">
                     <span class="suggestion__icon">
                         <i class="fas fa-quote-right fa-2x"></i>
                     </span>
                     <span class="suggestion__title">Kakao Story</span>
                 </li>
-                <li class="more__suggestion suggestion">
+                <li class="more__suggestions suggestion">
                     <span class="suggestion__icon">
                         <i class="fas fa-beer fa-2x"></i>
                     </span>
                     <span class="suggestion__title">Kakao friends</span>
                 </li>
-                <li class="more__suggestion suggestion">
+                <li class="more__suggestions suggestion">
                     <span class="suggestion__icon">
                         <i class="fas fa-gamepad fa-2x"></i>
                     </span>
@@ -123,8 +124,13 @@
             </li>
             <li class="nav__list-item">
                 <a href="more.html" class="nav__list-link">
-                    <i class="fas fa-ellipsis-h"></i></a></li>
+                    <i class="fas fa-ellipsis-h"></i>
+                </a>
+            </li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small</span>
+    </div>
 </body>
 </html>
