--- a/settings.html
+++ b/settings.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d620e8ba14.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Settings | Kakao Clone</title>
 </head>
 <body>
@@ -22,33 +23,52 @@
     <header class="header">
         <div class="header__header-column">
                 <a href="more.html" class="header__back-btn">
-                    <i class="fas fa-arrow-left fa-2x"></i>
+                    <i class="fas fa-arrow-left"></i>
                 </a>
             <h1 class="header__title">Settings</h1>
         </div>
         <div class="header__header-column">
-            <span class="header icon">
+            <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
         </div>
     </header>
     <main class="settings">
-        <section class="setting__Sections">
+        <section class="settings__sections">
             <ul class="settings__list">
-                <li class="settings-setting">
+                <li class="settings__setting">
                     <span class="settings__icon"><i class="fas fa-lock"></i></span>
                     <span class="settings__title">Privacy</span>
                 </li>
-                <li class="settings-setting">
+                <li class="settings__setting">
                     <span class="settings__icon"><i class="far fa-bell"></i></span>
                     <span class="settings__title">Notifications</span>
                 </li>
-                <li class="settings-setting">
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="far fa-user"></i></span>
+                    <span class="settings__title">Friends</span>
+                </li>
+            </ul>
+        </section>
+        <section class="settings__sections">
+            <ul class="settings__list">
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="fas fa-lock"></i></span>
+                    <span class="settings__title">Privacy</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="far fa-bell"></i></span>
+                    <span class="settings__title">Notifications</span>
+                </li>
+                <li class="settings__setting">
                     <span class="settings__icon"><i class="far fa-user"></i></span>
                     <span class="settings__title">Friends</span>
                 </li>
             </ul>
         </section>
     </main>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small</span>
+    </div>
 </body>
 </html>
